# claude-code-explorer

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  package-lock.json  package.json
api/: package-lock.json  package.json  pyproject.toml  tsconfig.json
api-py/: README.md  generated-openapi.json
api-py/scripts/: validate_openapi.py
api-py/src/: models.py  utils.py
api-py/src/routes/: commands.py  config.py  correlated.py  files.py  history.py  plans.py  plugins.py  projects.py  shell_snapshots.py  skills.py  stats.py
api/scripts/: validate_openapi.py
api/src/: index.ts  main.py  models.py  utils.py
api/src/routes/: activity.py  commands.py  config.py  config.ts  correlated.py  correlated.ts  files.py  files.ts  history.py  history.ts  plans.py  plans.ts  plugins.py  projects.py  projects.ts  sessions.ts  shell_snapshots.py  skills.py  skills.ts  stats.py  stats.ts
app/: layout.tsx  page.tsx
app/api/settings/: route.ts
app/projects/[id]/: page.tsx
app/projects/[id]/sessions/[sessionId]/: page.tsx
components/: activity-timeline.tsx  column-info-modal.tsx  project-config-modal.tsx  session-tabs.tsx  settings-modal.tsx  source-path.tsx
docs/: api-spec.yaml  claude-code-data-structures.md  dev-journal-agent-prompt.md
docs/scripts/: api_proxy.py
lib/: actions.ts  api-client.ts  claude-data.ts  format-utils.ts  path-utils.ts  session-correlator.ts  types.ts  url-utils.ts
