[project]
name = "claude-explorer-api"
version = "1.0.0"
description = "REST API for exploring ~/.claude/ session data and metadata"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fast-llms-txt>=0.2.0",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.40.0",
]


[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
